# sql-graph

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  query.py  run_pipeline.py
core/: config.py  openai_client.py
docker_compose_files/: my-sql.yml  neo4j.yml
graph/: store.py
pipeline/: enricher.py  extractor.py  relationships.py
src/core/: config.py  openai_client.py
src/db/: connection.py
src/graph/: store.py
src/pipeline/: enricher.py  extractor.py  relationships.py
src/query/: __init__.py  resolver.py
synthetic_data/: README.md  __init__.py  seed_cli.py  seed_connection.py  seed_demo_schema.py  seed_generator.py  seed_models.py  seed_mysql.py  seed_runner.py  seed_schema.py
